--- a/nym-vpn-core/crates/nym-vpnd/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnd/Cargo.toml
@@ -28,6 +28,7 @@ thiserror.workspace = true
 time.workspace = true
 tokio = { workspace = true, features = ["full"]}
 tokio-stream.workspace = true
+tokio-util.workspace = true
 toml.workspace = true
 tonic-health.workspace = true
 tonic-reflection.workspace = true
