--- a/.github/workflows/ci-nym-vpn-android.yml
+++ b/.github/workflows/ci-nym-vpn-android.yml
@@ -40,8 +40,8 @@ jobs:
 
       - name: Run detekt
         run: ./gradlew detekt --info
-
-  build-nym-vpn-android:
-    uses: ./.github/workflows/build-nym-vpn-android.yml
-    with:
-      build_type: 'debug'
+# disable ci builds until state machine
+#  build-nym-vpn-android:
+#    uses: ./.github/workflows/build-nym-vpn-android.yml
+#    with:
+#      build_type: 'debug'
