Update for new name

--- a/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nym-account-controller"
+name = "nym-vpn-account-controller"
 version.workspace = true
 authors.workspace = true
 repository.workspace = true
