--- a/nym-vpn-core/crates/nym-vpnd/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnd/Cargo.toml
@@ -28,6 +28,7 @@ thiserror.workspace = true
 time.workspace = true
 tokio = { workspace = true, features = ["full"]}
 tokio-stream.workspace = true
+tokio-util.workspace = true
 toml.workspace = true
 tonic-health.workspace = true
 tonic-reflection.workspace = true
@@ -49,6 +50,7 @@ nym-task.workspace = true
 nym-validator-client.workspace = true
 
 # Local crates
+nym-vpn-account-controller = { path = "../nym-vpn-account-controller" }
 nym-vpn-api-client = { path = "../nym-vpn-api-client" }
 nym-vpn-lib = { path = "../nym-vpn-lib" }
 nym-vpn-proto = { path = "../nym-vpn-proto" }
