--- a/.github/workflows/build-nym-vpn-core-android.yml
+++ b/.github/workflows/build-nym-vpn-core-android.yml
@@ -80,6 +80,7 @@ jobs:
         run: |
           mkdir ${{ env.UPLOAD_DIR_ANDROID }}
           cp -vpr ${{ env.SRC_BINARY }}/libnym_vpn_lib.so ${{ env.UPLOAD_DIR_ANDROID }}
+          cp -vpr ${{ env.WG_GO_LIB_PATH }}/${{ env.WG_GO_LIB_NAME }} ${{ env.UPLOAD_DIR_ANDROID }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
