--- a/.github/workflows/build-nym-vpn-android.yml
+++ b/.github/workflows/build-nym-vpn-android.yml
@@ -13,8 +13,7 @@ on:
           - nightly
           - release
       core_build:
-        type: string
-        description: "Core release version tag or \"source"\"
+        description: "Core release version tag or \"source\""
         required: true
         default: source
     secrets:
@@ -39,7 +38,7 @@ on:
         default: debug
       core_build:
         type: string
-        description: "Core release version tag or \"source"\"
+        description: "Core release version tag or \"source\""
         required: true
         default: source
     secrets:
