--- a/.github/workflows/publish-nym-vpn-android.yml
+++ b/.github/workflows/publish-nym-vpn-android.yml
@@ -28,11 +28,6 @@ on:
         description: "Tag name for release"
         required: false
         default: nym-vpn-android-nightly
-      core_build:
-        type: string
-        description: "Core release version tag or \"source"\"
-        required: true
-        default: source
       release_type:
         type: choice
         description: "GitHub release type"
@@ -43,6 +38,10 @@ on:
           - release
         default: release
         required: true
+      core_build:
+        description: "Core release version tag or \"source\""
+        required: true
+        default: source
 
   push:
     tags:
