--- a/nym-vpn-core/crates/nym-vpn-cli/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-cli/Cargo.toml
@@ -25,6 +25,7 @@ tracing.workspace = true
 
 nym-vpn-api-client = { path = "../nym-vpn-api-client" }
 nym-vpn-lib = { path = "../nym-vpn-lib" }
+nym-vpn-store = { path = "../nym-vpn-store" }
 
 nym-bin-common.workspace = true
 
