Put BandwidthController handler in state machine

--- a/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
@@ -62,6 +62,8 @@ nym-bandwidth-controller.workspace = true
 nym-bin-common.workspace = true
 nym-client-core.workspace = true
 nym-config.workspace = true
+nym-credential-storage.workspace = true
+nym-credentials-interface.workspace = true
 nym-crypto.workspace = true
 nym-ip-packet-requests.workspace = true
 nym-node-requests.workspace = true
