--- a/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
@@ -16,6 +16,7 @@ nym-ecash-time.workspace = true
 nym-http-api-client.workspace = true
 nym-vpn-api-client = { path = "../nym-vpn-api-client" }
 nym-vpn-store = { path = "../nym-vpn-store" }
+reqwest.workspace = true
 thiserror.workspace = true
 tokio-util.workspace = true
 tokio.workspace = true
