Interact with local credential store

--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -85,6 +85,8 @@ serde_json = "1.0"
 sha2 = "0.10"
 signature = "2.2.0"
 sqlx = "0.6.3"
+strum = "0.26"
+strum_macros = "0.26"
 sysinfo = "0.31"
 tap = "1.0.1"
 tempfile = "3.13"
