--- a/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
@@ -11,12 +11,16 @@ license.workspace = true
 [dependencies]
 nym-compact-ecash.workspace = true
 nym-config.workspace = true
+nym-credential-storage.workspace = true
 nym-credentials-interface.workspace = true
 nym-ecash-time.workspace = true
 nym-http-api-client.workspace = true
+nym-sdk.workspace = true
 nym-vpn-api-client = { path = "../nym-vpn-api-client" }
 nym-vpn-store = { path = "../nym-vpn-store" }
 reqwest.workspace = true
+strum.workspace = true
+strum_macros.workspace = true
 thiserror.workspace = true
 tokio-util.workspace = true
 tokio.workspace = true
