--- a/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
@@ -104,3 +104,4 @@ vergen = { workspace = true, default-features = false, features = [
 
 [features]
 metrics-server = ["nym-client-core/metrics-server"]
+amnezia = ["nym-wg-go/amnezia"]
