initial compiling amnezia lib exchanged for wireguard-go
basic structs and feature for amnezia configuration - libs still build

--- a/nym-vpn-core/crates/nym-wg-go/Cargo.toml
+++ b/nym-vpn-core/crates/nym-wg-go/Cargo.toml
@@ -8,6 +8,10 @@ documentation.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[features]
+default = []
+amnezia = []
+
 [dependencies]
 ipnetwork.workspace = true
 thiserror.workspace = true
