--- a/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
@@ -111,4 +111,6 @@ vergen = { workspace = true, default-features = false, features = [
 ] }
 
 [features]
+default = []
 metrics-server = ["nym-client-core/metrics-server"]
+amnezia = ["nym-wg-go/amnezia"]
