--- a/nym-vpn-core/crates/nym-wg-go/Cargo.toml
+++ b/nym-vpn-core/crates/nym-wg-go/Cargo.toml
@@ -8,6 +8,10 @@ documentation.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[features]
+default = []
+amnezia = []
+
 [dependencies]
 ipnetwork.workspace = true
 thiserror.workspace = true
@@ -16,6 +20,7 @@ hex.workspace = true
 base64.workspace = true
 x25519-dalek = { workspace = true, features = ["static_secrets"] }
 zeroize.workspace = true
+rand.workspace = true
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = { workspace = true, features = ["Win32_NetworkManagement_Ndis"] }
