Fetch signatures and insert

--- a/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
@@ -13,12 +13,15 @@ nym-compact-ecash.workspace = true
 nym-config.workspace = true
 nym-credential-storage.workspace = true
 nym-credentials-interface.workspace = true
+nym-credentials.workspace = true
 nym-ecash-time.workspace = true
 nym-http-api-client.workspace = true
 nym-sdk.workspace = true
+nym-validator-client.workspace = true
 nym-vpn-api-client = { path = "../nym-vpn-api-client" }
 nym-vpn-store = { path = "../nym-vpn-store" }
 reqwest.workspace = true
+serde.workspace = true
 strum.workspace = true
 strum_macros.workspace = true
 thiserror.workspace = true
