--- a/nym-vpn-core/crates/nym-vpnd/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnd/Cargo.toml
@@ -14,6 +14,7 @@ anyhow.workspace = true
 bip39.workspace = true
 clap.workspace = true
 dirs.workspace = true
+dotenvy = "0.15"
 futures.workspace = true
 http.workspace = true
 maplit.workspace = true
@@ -21,6 +22,7 @@ parity-tokio-ipc.workspace = true
 prost-types.workspace = true
 prost.workspace = true
 reqwest = { workspace = true, default-features = false, features = [
+    "blocking",
     "rustls-tls",
 ] }
 serde.workspace = true
