--- a/nym-vpn-core/crates/nym-vpn-api-client/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-api-client/Cargo.toml
@@ -15,6 +15,7 @@ bip39 = { workspace = true, features = ["zeroize"] }
 bs58.workspace = true
 chrono.workspace = true
 nym-compact-ecash.workspace = true
+nym-config.workspace = true
 nym-contracts-common.workspace = true
 nym-credentials-interface.workspace = true
 nym-crypto = { workspace = true, features = ["asymmetric"] }
