--- a/nym-vpn-core/crates/nym-common/Cargo.toml
+++ b/nym-vpn-core/crates/nym-common/Cargo.toml
@@ -10,7 +10,7 @@ edition.workspace = true
 log = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-libc = "0.2"
+libc.workspace = true
 thiserror.workspace = true
 
 [target.'cfg(windows)'.dependencies.windows-sys]
