--- a/nym-vpn-core/crates/nym-routing/Cargo.toml
+++ b/nym-vpn-core/crates/nym-routing/Cargo.toml
@@ -23,15 +23,15 @@ tokio = { workspace = true, features = [
 nym-common = { path = "../nym-common" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-libc = "0.2"
-rtnetlink = "0.11"
+libc.workspace = true
 netlink-packet-route = { version = "0.13", features = ["rich_nlas"] }
 netlink-sys = "0.8.3"
+rtnetlink = "0.11"
 
 [target.'cfg(target_os = "macos")'.dependencies]
-nix = { version = "0.28", features = ["socket", "fs", "net"] }
-libc = "0.2"
 bitflags = "2"
+libc.workspace = true
+nix = { version = "0.28", features = ["socket", "fs", "net"] }
 system-configuration.workspace = true
 
 
