--- a/nym-vpn-core/crates/nym-vpnd/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnd/Cargo.toml
@@ -60,7 +60,7 @@ eventlog = "0.2.2"
 winapi = { version = "0.3", features = ["winnt", "excpt"] }
 
 [target.'cfg(windows)'.dependencies.windows-sys]
-version = "0.52.0"
+workspace = true
 features = [
     "Win32_Foundation",
     "Win32_Security",
