--- a/nym-vpn-app/package.json
+++ b/nym-vpn-app/package.json
@@ -55,7 +55,6 @@
     "react-window": "^1.8.10"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
     "@tauri-apps/cli": "^2.0.1",
     "@types/eslint__js": "^8.42.3",
@@ -70,7 +69,7 @@
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.34.4",
-    "eslint-plugin-react-hooks": "^5.1.0-rc-187dd6a7-20240806",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.9.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.39",
