Add network discovery and selection capability to nym-vpnd (#1361)

--- a/nym-vpn-core/crates/nym-vpnd/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnd/Cargo.toml
@@ -21,6 +21,7 @@ parity-tokio-ipc.workspace = true
 prost-types.workspace = true
 prost.workspace = true
 reqwest = { workspace = true, default-features = false, features = [
+    "blocking",
     "rustls-tls",
 ] }
 serde.workspace = true
