--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -117,8 +117,8 @@ jobs:
 
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
-        if: ${{ !contains(matrix.os, 'ubuntu') }}
         with:
+          version: "3.21" # The version on ubuntu 24.04. Don't change this!
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup MSBuild.exe
