--- a/.github/workflows/build-nym-vpn-core-deb.yml
+++ b/.github/workflows/build-nym-vpn-core-deb.yml
@@ -35,6 +35,12 @@ jobs:
         run: |
           cargo install --locked cargo-deb
 
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "3.21" # The version on ubuntu 24.04. Don't change this!
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Download wireguard-go artifacts
         uses: actions/download-artifact@v4
         with:
