Enable iOS in publish-nym-vpn-core

--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -20,11 +20,11 @@ jobs:
         # os: [arc-ubuntu-22.04, custom-runner-mac-m1, custom-windows-11]
         os: [arc-ubuntu-22.04, custom-runner-mac-m1]
         target: [native]
-        # include:
+        include:
         #   - os: arc-ubuntu-22.04
         #     target: android
-        #   - os: custom-runner-mac-m1
-        #     target: ios
+          - os: custom-runner-mac-m1
+            target: ios
     runs-on: ${{ matrix.os }}
 
     steps:
