Extend diagnostics and info types for accounts (#1369)
* Structured return type for account state

* Add missing states

* Add IsAccountStored to vpnc

* Update the some of the names in the proto API

* github workflow updates

* Add notice about restart required

* Fix downcast

* Reduce logging a tad

* Update another set of names

* Add sandbox

* Add account check for fetch calls

* Handle DeviceState::DeleteMe

* update tauri grpc client

* fix

* fix

---------

Co-authored-by: pierre <dommerc.pierre@gmail.com>

--- a/.github/workflows/build-nym-vpn-core-linux.yml
+++ b/.github/workflows/build-nym-vpn-core-linux.yml
@@ -37,6 +37,12 @@ jobs:
           toolchain: stable
           components: rustfmt, clippy
 
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "21.12" # 3.21.12: the version on ubuntu 24.04. Don't change this!
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Download wireguard-go artifacts
         uses: actions/download-artifact@v4
         with:
