--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -31,8 +31,14 @@ members = [
 # nym-bandwidth-controller = { path = "../../nym/common/bandwidth-controller" }
 # nym-bin-common = { path = "../../nym/common/bin-common" }
 # nym-client-core = { path = "../../nym/common/client-core" }
+# nym-compact-ecash = { path = "../../nym/common/nym_offline_compact_ecash" }
 # nym-config = { path = "../../nym/common/config" }
+# nym-contracts-common = { path = "../../nym/common/cosmwasm-smart-contracts/contracts-common" }
+# nym-credential-storage = { path = "../../nym/common/credential-storage" }
+# nym-credentials = { path = "../../nym/common/credentials" }
+# nym-credentials-interface = { path = "../../nym/common/credentials-interface" }
 # nym-crypto = { path = "../../nym/common/crypto" }
+# nym-ecash-time = { path = "../../nym/common/ecash-time" }
 # nym-http-api-client = { path = "../../nym/common/http-api-client" }
 # nym-ip-packet-requests = { path = "../../nym/common/ip-packet-requests" }
 # nym-node-requests = { path = "../../nym/nym-node/nym-node-requests" }
