--- a/.github/workflows/publish-nym-vpn-core.yml
+++ b/.github/workflows/publish-nym-vpn-core.yml
@@ -17,7 +17,7 @@ env:
   UPLOAD_DIR_LINUX: linux_artifacts
   UPLOAD_DIR_MAC: mac_artifacts
   UPLOAD_DIR_DEB: deb_artifacts
-  # UPLOAD_DIR_ANDROID: android_artifacts
+  UPLOAD_DIR_ANDROID: android_artifacts
   UPLOAD_DIR_IOS: ios_artifacts
   # UPLOAD_DIR_WINDOWS: windows_artifacts
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -29,8 +29,8 @@ jobs:
     uses: ./.github/workflows/build-nym-vpn-core-deb.yml
   build-nym-vpn-core-mac:
     uses: ./.github/workflows/build-nym-vpn-core-mac.yml
-  # build-nym-vpn-core-android:
-  #   uses: ./.github/workflows/build-nym-vpn-core-android.yml
+  build-nym-vpn-core-android:
+    uses: ./.github/workflows/build-nym-vpn-core-android.yml
   build-nym-vpn-core-ios:
     uses: ./.github/workflows/build-nym-vpn-core-ios.yml
   # build-nym-vpn-core-windows:
@@ -48,7 +48,7 @@ jobs:
       - build-nym-vpn-core-linux
       - build-nym-vpn-core-mac
       - build-nym-vpn-core-deb
-      # - build-nym-vpn-core-android
+      - build-nym-vpn-core-android
       - build-nym-vpn-core-ios
       # - build-nym-vpn-core-windows
       - generate-build-info-core
@@ -98,30 +98,30 @@ jobs:
         run: |
           ARCHIVE_LINUX=nym-vpn-core-v${{ steps.workspace-version.outputs.metadata }}_linux_x86_64
           ARCHIVE_MAC=nym-vpn-core-v${{ steps.workspace-version.outputs.metadata }}_macos_universal
-          # ARCHIVE_ANDROID=nym-vpn-core-v${{ steps.workspace-version.outputs.metadata }}_android_aarch64
+          ARCHIVE_ANDROID=nym-vpn-core-v${{ steps.workspace-version.outputs.metadata }}_android_aarch64
           ARCHIVE_IOS=nym-vpn-core-v${{ steps.workspace-version.outputs.metadata }}_ios_universal
           # ARCHIVE_WINDOWS=nym-vpn-core-v${{ steps.workspace-version.outputs.metadata }}_windows_x86_64
           echo "ARCHIVE_LINUX=${ARCHIVE_LINUX}" >> $GITHUB_ENV
           echo "ARCHIVE_MAC=${ARCHIVE_MAC}" >> $GITHUB_ENV
-          # echo "ARCHIVE_ANDROID=${ARCHIVE_ANDROID}" >> $GITHUB_ENV
+          echo "ARCHIVE_ANDROID=${ARCHIVE_ANDROID}" >> $GITHUB_ENV
           echo "ARCHIVE_IOS=${ARCHIVE_IOS}" >> $GITHUB_ENV
           # echo "ARCHIVE_WINDOWS=${ARCHIVE_WINDOWS}" >> $GITHUB_ENV
 
           mv ${{ env.UPLOAD_DIR_LINUX }} ${ARCHIVE_LINUX}
           mv ${{ env.UPLOAD_DIR_MAC }} ${ARCHIVE_MAC}
-          # mv ${{ env.UPLOAD_DIR_ANDROID }} ${ARCHIVE_ANDROID}
+          mv ${{ env.UPLOAD_DIR_ANDROID }} ${ARCHIVE_ANDROID}
           mv ${{ env.UPLOAD_DIR_IOS }} ${ARCHIVE_IOS}
           # mv ${{ env.UPLOAD_DIR_WINDOWS }} ${ARCHIVE_WINDOWS}
 
           tar cvzf ${ARCHIVE_LINUX}.tar.gz ${ARCHIVE_LINUX}
           tar cvzf ${ARCHIVE_MAC}.tar.gz ${ARCHIVE_MAC}
-          # tar cvzf ${ARCHIVE_ANDROID}.tar.gz ${ARCHIVE_ANDROID}
+          tar cvzf ${ARCHIVE_ANDROID}.tar.gz ${ARCHIVE_ANDROID}
           zip -r ${ARCHIVE_IOS}.zip ${ARCHIVE_IOS}
           # zip -r ${ARCHIVE_WINDOWS}.zip ${ARCHIVE_WINDOWS}
 
           sha256sum ${ARCHIVE_LINUX}.tar.gz > "${ARCHIVE_LINUX}.tar.gz.sha256sum"
           sha256sum ${ARCHIVE_MAC}.tar.gz > "${ARCHIVE_MAC}.tar.gz.sha256sum"
-          # sha256sum ${ARCHIVE_ANDROID}.tar.gz > "${ARCHIVE_ANDROID}.tar.gz.sha256sum"
+          sha256sum ${ARCHIVE_ANDROID}.tar.gz > "${ARCHIVE_ANDROID}.tar.gz.sha256sum"
           sha256sum ${ARCHIVE_IOS}.zip > "${ARCHIVE_IOS}.zip.sha256sum"
           # sha256sum ${ARCHIVE_WINDOWS}.zip > "${ARCHIVE_WINDOWS}.zip.sha256sum"
 
@@ -134,7 +134,7 @@ jobs:
           echo 'SHA256_CHECKSUMS<<EOF' >> $GITHUB_ENV
           cat ${ARCHIVE_LINUX}.tar.gz.sha256sum >> $GITHUB_ENV
           cat ${ARCHIVE_MAC}.tar.gz.sha256sum >> $GITHUB_ENV
-          # cat ${ARCHIVE_ANDROID}.tar.gz.sha256sum >> $GITHUB_ENV
+          cat ${ARCHIVE_ANDROID}.tar.gz.sha256sum >> $GITHUB_ENV
           cat ${ARCHIVE_IOS}.zip.sha256sum >> $GITHUB_ENV
           # cat ${ARCHIVE_WINDOWS}.zip.sha256sum >> $GITHUB_ENV
           pushd ${{ env.UPLOAD_DIR_DEB }}
@@ -175,9 +175,9 @@ jobs:
             ${{ env.ARCHIVE_LINUX }}.tar.gz ${{ env.ARCHIVE_LINUX }}.tar.gz.sha256sum \
             ${{ env.ARCHIVE_MAC }}.tar.gz ${{ env.ARCHIVE_MAC }}.tar.gz.sha256sum \
             ${{ env.ARCHIVE_IOS }}.zip ${{ env.ARCHIVE_IOS }}.zip.sha256sum \
+            ${{ env.ARCHIVE_ANDROID }}.tar.gz ${{ env.ARCHIVE_ANDROID }}.tar.gz.sha256sum \
             ${{ env.UPLOAD_DIR_DEB}}/nym-vpn*_amd64.deb ${{ env.UPLOAD_DIR_DEB }}/nym-vpn*_amd64.deb.sha256sum
 
-          # ${{ env.ARCHIVE_ANDROID }}.tar.gz ${{ env.ARCHIVE_ANDROID }}.tar.gz.sha256sum \
           # ${{ env.ARCHIVE_WINDOWS }}.zip ${{ env.ARCHIVE_WINDOWS }}.zip.sha256sum \
 
   gen-hashes:
