Re-enable windows for nym-vpn-core CI and release

--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -17,8 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: [arc-ubuntu-22.04, custom-runner-mac-m1, custom-windows-11]
-        os: [arc-ubuntu-22.04, custom-runner-mac-m1]
+        os: [arc-ubuntu-22.04, custom-runner-mac-m1, custom-windows-11]
         target: [native]
         include:
           - os: arc-ubuntu-22.04
