build(tauri-linux): use latest official protoc (#1376)
* use latest official protoc on linux build

* use outdated version ubuntu24 is using

(required by jon)

--- a/.github/workflows/build-nym-vpn-app-linux.yml
+++ b/.github/workflows/build-nym-vpn-app-linux.yml
@@ -61,6 +61,12 @@ jobs:
         with:
           node-version: 20
 
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "21.12" # version on ubuntu 24.04
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Get package version
         id: package-version
         uses: nicolaiunrein/cargo-get@master
