--- a/.github/workflows/build-wireguard-go-windows.yml
+++ b/.github/workflows/build-wireguard-go-windows.yml
@@ -31,9 +31,7 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install build tools
-        shell: cmd
-        run: |
-          winget install --id=Microsoft.VisualStudio.2022.BuildTools --silent --override "--wait --add Microsoft.VisualStudio.Workload.VCTools;includeRecommended"
+        uses: seanmiddleditch/gha-setup-vsdevenv@v4
 
       - name: Setup msys2
         uses: msys2/setup-msys2@v2
