--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -120,13 +120,43 @@ jobs:
           version: "21.12" # 3.21.12: the version on ubuntu 24.04. Don't change this!
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Setup MSBuild.exe
+      - name: Install build tools
         if: contains(matrix.os, 'windows')
-        uses: microsoft/setup-msbuild@v2
+        shell: cmd
+        run: |
+          winget install --disable-interactivity --id=Microsoft.VisualStudio.2022.BuildTools --override "--wait --passive --add Microsoft.VisualStudio.Workload.VCTools;includeRecommended"
+          if %ERRORLEVEL% EQU -1978335189 (
+            exit /b 0
+          )
+
+      - name: Update path with vctools
+        if: contains(matrix.os, 'windows')
+        shell: pwsh
+        run: |
+          $path = "$Env:ProgramFiles (x86)/Microsoft Visual Studio/2022/BuildTools/VC/Tools/MSVC"
+          $contents = Get-ChildItem $path | Select-Object -First 1
+          $subdir = $contents[0].Name
+          $vctoolsdir = "$path/$subdir/bin/Hostx64/x64"
+          echo "Add vctools dir to path: $vctoolsdir"
+          Add-Content $env:GITHUB_PATH "$vctoolsdir"
+
+      - name: Setup msys2
+        if: contains(matrix.os, 'windows')
+        uses: msys2/setup-msys2@v2
+        with:
+          update: false
+          msystem: MINGW64
+          install: mingw-w64-x86_64-clang
 
       - name: Build wireguard
-        if: matrix.target != 'ios' && matrix.target != 'android'
+        if: matrix.target != 'ios' && matrix.target != 'android' && !contains(matrix.os, 'windows')
         shell: bash
+        run: |
+          ./wireguard/build-wireguard-go.sh
+
+      - name: Build wireguard (Windows)
+        if: contains(matrix.os, 'windows')
+        shell: msys2 {0}
         run: |
           ./wireguard/build-wireguard-go.sh
 
