--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -17,7 +17,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: [arc-ubuntu-22.04, custom-runner-mac-m1, custom-windows-11]
         os: [arc-ubuntu-22.04, custom-runner-mac-m1]
         target: [native]
         include:
@@ -40,10 +39,6 @@ jobs:
       - name: Install system dependencies
         run: sudo apt-get update && sudo apt-get install -y libdbus-1-dev libmnl-dev libnftnl-dev protobuf-compiler git curl gcc g++ make unzip
         if: contains(matrix.os, 'ubuntu')
-
-      - name: Support longpaths on windows
-        if: contains(matrix.os, 'windows')
-        run: git config --system core.longpaths true
 
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -80,30 +75,20 @@ jobs:
           if ${{ contains(matrix.os, 'ubuntu') && contains(matrix.target, 'native') }}; then
             triplet=x86_64-unknown-linux-gnu
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet}" >> $GITHUB_ENV
           elif ${{ matrix.target == 'android' }}; then
             triplet=aarch64-linux-android
             echo "ANDROID_NDK_HOME=${{ steps.setup-ndk.outputs.ndk-path }}" >> $GITHUB_ENV
             echo "NDK_TOOLCHAIN_DIR=${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin" >> $GITHUB_ENV
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet} -L ${GITHUB_WORKSPACE}/build/lib/x86_64-unknown-linux-gnu" >> $GITHUB_ENV
           elif ${{ matrix.target == 'ios' }}; then
             triplet=aarch64-apple-ios
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet}" >> $GITHUB_ENV
           elif ${{ matrix.os == 'macos-12' || matrix.os == 'macos-13' }}; then
             triplet=x86_64-apple-darwin
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet}" >> $GITHUB_ENV
           elif ${{ contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1') }}; then
             triplet=universal-apple-darwin
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet}" >> $GITHUB_ENV
-          elif ${{ contains(matrix.os, 'windows') }}; then
-            triplet=x86_64-pc-windows-msvc
-            echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet} -L ${GITHUB_WORKSPACE}/build/lib/ -Clink-args=/LIBPATH:${GITHUB_WORKSPACE}/build/lib/x64-Debug" >> $GITHUB_ENV
-            mkdir -p ${GITHUB_WORKSPACE}/build/lib/
           else
             echo " ✗ unknown platform/arch [${{ matrix.os }}]"
             exit 1
@@ -121,10 +106,6 @@ jobs:
           version: "21.12" # 3.21.12: the version on ubuntu 24.04. Don't change this!
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Setup MSBuild.exe
-        if: contains(matrix.os, 'windows')
-        uses: microsoft/setup-msbuild@v2
-
       - name: Build wireguard
         if: matrix.target != 'ios' && matrix.target != 'android'
         shell: bash
@@ -140,49 +121,6 @@ jobs:
       - name: Build wireguard (Android)
         if: matrix.target == 'android'
         run: ./wireguard/libwg/build-android.sh
-
-      - name: Download wintun.zip and winpcap.zip
-        if: contains(matrix.os, 'windows')
-        shell: bash
-        run: |
-          curl --output ${GITHUB_WORKSPACE}/wintun.zip https://www.wintun.net/builds/wintun-0.14.1.zip
-          curl --output ${GITHUB_WORKSPACE}/winpcap.zip https://www.winpcap.org/install/bin/WpdPack_4_1_2.zip
-
-      - name: Unzip wintun.zip and winpcap.zip
-        if: contains(matrix.os, 'windows')
-        shell: bash
-        run: |
-          unzip ${GITHUB_WORKSPACE}/wintun.zip
-          unzip ${GITHUB_WORKSPACE}/winpcap.zip
-
-      - name: Move wintun.dll and packet.lib to build directory
-        if: contains(matrix.os, 'windows')
-        shell: bash
-        run: |
-          mv ${GITHUB_WORKSPACE}/wintun/bin/amd64/wintun.dll ${GITHUB_WORKSPACE}/build/lib/
-          mv ${GITHUB_WORKSPACE}/WpdPack/Lib/x64/Packet.lib ${GITHUB_WORKSPACE}/build/lib/
-
-      - name: Checkout mullvad libs for Windows
-        if: contains(matrix.os, 'windows')
-        uses: actions/checkout@v4
-        with:
-          repository: nymtech/nym-vpn-mullvad-libs
-          ref: main
-          path: "nym-vpn-mullvad-libs"
-          submodules: true
-
-      - name: Build winfw.dll from mullvad
-        if: contains(matrix.os, 'windows')
-        shell: bash
-        run: |
-          cd ${GITHUB_WORKSPACE}/nym-vpn-mullvad-libs
-          ./build-windows-modules.sh
-
-      - name: Move winfw.dll to build directory
-        if: contains(matrix.os, 'windows')
-        shell: bash
-        run: |
-          mv ${GITHUB_WORKSPACE}/nym-vpn-mullvad-libs/windows/winfw/bin/x64-Debug ${GITHUB_WORKSPACE}/build/lib/
 
       - name: rustfmt check
         working-directory: nym-vpn-core
@@ -266,16 +204,10 @@ jobs:
         run: exit 1
 
       - name: Run tests (Linux, macOS)
-        if: matrix.target != 'android' && matrix.target != 'ios' && !contains(matrix.os, 'windows')
+        if: matrix.target != 'android' && matrix.target != 'ios'
         working-directory: nym-vpn-core
         run: |
           cargo test --verbose
-
-      - name: Run tests (Windows excluding gateway probe)
-        if: contains(matrix.os, 'windows')
-        working-directory: nym-vpn-core
-        run: |
-          cargo test --verbose --workspace --exclude nym-gateway-probe
 
       - name: Clippy
         working-directory: nym-vpn-core
